# cc-switch-web

./: .gitignore  README.md  README_JA.md  README_ZH.md  WEB_MODE.md  build-web-release.sh  package.json  start-web.sh  stop-web.sh  vite.config.mts  vite.config.ts
.github/workflows/: build-web-release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  state.rs
crates/server/src/api/: dispatch.rs  invoke.rs  mod.rs  sql_export.rs  sql_import.rs  ws.rs
crates/server/tests/: tauri_rpc_consistency.rs
openspec/: project.opsx.code-map.yaml  project.opsx.yaml
openspec/specs/settings-backup/: spec.md
openspec/specs/web-runtime-delivery/: spec.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_store.rs  lib.rs  ui_runtime.rs
src-tauri/src/commands/: import_export.rs  misc.rs  mod.rs  session_manager.rs  usage.rs
src-tauri/src/proxy/: failover_switch.rs  forwarder.rs  handlers.rs  server.rs
src-tauri/src/services/: proxy.rs  webdav_auto_sync.rs
src/components/: LoginPage.tsx
src/components/settings/: ImportExportSection.tsx  SettingsPage.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useImportExport.ts
src/i18n/: index.ts
src/lib/api/: auth.ts  index.ts  settings.ts
src/lib/transport/: httpTransport.ts  index.ts
tests/components/: ImportExportSection.test.tsx
tests/entry/: main.web.test.tsx
tests/hooks/: useImportExport.extra.test.tsx  useImportExport.test.tsx
